# CryptoWallet

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 2023-06-07_init_user.py  2023-06-07_init_wallet_service.py  2023-06-14_18:27_add_transaction_table.py  2023-06-16_19:23_add_private_key_to_wallet.py  2023-07-18_13:17_add_product_model.py  2023-07-18_15:41_add_order_model.py  2023-07-19_11:16_add_tnx_hash_to_order.py  2023-07-19_12:00_order_return_address_nullable.py  2023-07-19_19:10_add_parsed_block_table.py  2023-07-23_20:15_add_indexing_to_order.py
blockchain_ws_service/: conf.py  config.py  parser.py
config/: config.py  database.py  web3.py
config_celery/: celery.py
config_fastapi/: app.py  broker.py  urls.py
ibay_service/: broker.py  decorators.py  delivery.py  dependencies.py  service.py
ibay_service/conf/: app.py
ibay_service/config/: app.py
src/: config.py  database.py  dependencies.py  main.py  utils.py
src/auth/: dependencies.py  endpoints.py  schemas.py  service.py
src/ibay/: dependencies.py  endpoints.py  models.py  service.py  tasks.py
src/ibay/schemas/: product_schemas.py
src/users/: config.py  dependencies.py  endpoints.py  models.py  router.py  schemas.py  service.py
src/wallet/: dependencies.py  endpoints.py  models.py  router.py  schemas.py  service.py  tasks.py
src/wallet/heandlers/: wallet.py
src/wallet/http/: balance.py  client.py  transaction.py
src/wallet/schemas/: currency_schemas.py  transaction_schemas.py  wallet_schemas.py
