[tool.poetry]
name = "cryptowallet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
pyhumps = "^3.8.0"
python-dotenv = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.27.0"
typer = "^0.9.0"
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^1.10.8"}
pyjwt = "^2.7.0"
fastapi-mail = "^1.2.8"
python-multipart = "^0.0.6"
loguru = "^0.7.0"
sqlalchemy-file = "^0.4.0"
fasteners = "^0.18"
propan = {extras = ["async-rabbit"], version = "^0.1.2.17"}
pillow = "^9.5.0"
celery = {extras = ["redis"], version = "^5.3.0"}
web3 = "^6.5.0"
async-lru = "^2.0.3"
python-socketio = "^5.8.0"
click = "^8.1.4"
websockets = "^11.0.3"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
